fixed mobile overflow bug

--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -20,10 +20,16 @@ $confetti-size-800: 120px
 $confetti-size-621: 60px
 $confetti-size-420: 80px
 
+=border-radius($radius)
+	-webkit-border-radius: 	$radius
+	-moz-border-radius: 	$radius
+	-ms-border-radius: 		$radius
+	border-radius: 			$radius
+
 =rotate-text($i, $angle, $offset)
 	transform: rotate($angle / $num-letters * $i + $offset)
 
-body
+#outer-wrapper
 	padding: 0
 	margin: 0
 	height: 100vh
@@ -182,6 +188,7 @@ $transition: all .1s linear
 			color: $green
 
 			&::after
+				color: $blue
 				content: " |"
 
 		#pipe
@@ -191,7 +198,9 @@ $transition: all .1s linear
 
 	form
 		input[type='email']
-			border-radius: 4px
+
+			-webkit-appearance: none
+			@include border-radius(4px)
 			border: 2px solid $green
 			color: $green
 			font-family: $secondary-font-stack
